<?xml version="1.0"?>
<package format="2">
  <name>stepik</name>
  <version>0.0.0</version>
  <description>The stepik ros package</description>

  <maintainer email="yossiovcharik@gmail.com">yossi</maintainer>


  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
   <exec_depend>roscpp</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
   <exec_depend>visualization_msgs</exec_depend>
  <buildtool_depend>roscpp</buildtool_depend>
  <buildtool_depend>geometry_msgs</buildtool_depend>
  <buildtool_depend>visualization_msgs</buildtool_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
